--- a/index.html
+++ b/index.html
@@ -35,11 +35,9 @@
                             <img class="dumbelling" src="dumbell.png" alt style="width: 283px;">
                         </div>
                         <h1 class="my-1 text-center">The best fitness Gym in the town is here</h1>
-                        <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Perspiciatis illo fugiat iusto corporis veniam distinctio ad vero culpa non tempora, quo
-                            quas provident enim.
-                            Molestias cum iure assumenda non repellat magnam voluptatem ut. Harum alias dolor nostrum
-                            illum?</p>
+                        <p class="text-center">A gym, short for gymnasium, is a dedicated facility designed for physical exercise, strength training, and fitness activities.
+                           It provides a space equipped with various exercise machines, weights, cardio equipment, and often offers group fitness classes or personal training services.
+                            Gyms are popular among individuals seeking to improve their overall health, build strength, increase endurance, lose weight, or simply maintain an active lifestyle.</p>
                             <p class="deal text-center">The deal ends in <span id="demo"></span></p>
                             <div class="buttons">
                                 <button class="btn">Join now</button>
@@ -55,9 +53,8 @@
             <section class="section2">
                 <h1 class="text-center my-2">Pricing</h1>
                 <p class="my-2">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                Consectetur magnam quibusdam reprehenderit doloremque expedita, obcaecati ex illo ipsum numquam ullam temporibus quas eum laudantium similique maxime optio vel.
-                 Deleniti neque suscipit nemo aliquid! Eius iure odit minus dolores eveniet doloremque aliquam fugiat.
+                  The pricing structure of gyms can vary significantly depending on several factors, including the location, facilities, services, and membership options offered.
+                   It's important to note that the following information is based on general observations and may not reflect the specific pricing of every gym.
                 </p>
                 <div class="boxes flex justify-center">
                     <div class="box">
